Login Template with Google Login Button. Added Local and Production Environments.

--- a/myblog-ui/src/app/login/login.component.html
+++ b/myblog-ui/src/app/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-body">
+        <h1 class="card-title">Login to My Blog</h1>
+        <div class="form-group">
+          <a class="btn btn-outline-dark" href="{{ googleAuthUrl }}" role="button" style="text-transform: none">
+            <img
+              width="20px"
+              style="margin-bottom: 3px; margin-right: 5px"
+              alt="Google sign-in"
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"
+            />
+            Login with Google
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3"></div>
+</div>
