UI Authentication Code Improvements

--- a/myblog-ui/src/app/new-post/new-post.component.html
+++ b/myblog-ui/src/app/new-post/new-post.component.html
@@ -34,7 +34,7 @@
                 <input class="form-control" formControlName="name" placeholder="Enter Tag" />
               </div>
             </div>
-            <button (click)="addTag()" class="btn btn-secondary" type="button">Add</button>
+            <button (click)="addTag()" class="btn btn-secondary" type="button">Add Tag</button>
           </div>
           <button (click)="createPost()" class="btn btn-primary" type="submit">Submit</button>
         </form>
