--- a/myblog-ui/src/app/post/post.component.html
+++ b/myblog-ui/src/app/post/post.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-2"></div>
   <div class="col-md-8">
-    <div>
+    <div *ngIf="isLoggedIn">
       <a routerLink="/dashboard">Back to dashboard</a>
     </div>
     <div class="card">
@@ -9,7 +9,7 @@
         <h1 class="card-title">
           {{ post.title }}
         </h1>
-        <div [innerHTML]="post.body | safeHtml"></div>
+        <div *ngIf="post.body" [innerHTML]="post.body | safeHtml"></div>
       </div>
     </div>
   </div>
