--- a/myblog-ui/src/app/dashboard/dashboard.component.html
+++ b/myblog-ui/src/app/dashboard/dashboard.component.html
@@ -15,12 +15,12 @@
                 <a [routerLink]="['/post', post.slug]">{{ post.title }}</a>
               </h5>
               <div>
-                <b>{{ post.category.name }}</b>
+                <b *ngIf="post.category">{{ post.category.name }}</b>
                 &nbsp;&nbsp;
                 <span *ngFor="let tag of post.tags">{{ tag.name }} &nbsp;</span>
               </div>
               <div>
-                <span>{{ post.author.name }}</span
+                <span *ngIf="post.author">{{ post.author.name }}</span
                 >&nbsp;
                 <span>{{ post.timestamp | date : "medium" : "UTC +5:30" }}</span>
               </div>
